fix inline math color in dark mode on distill posts
d-math elements use Shadow DOM, so color must be set on the shadow
host itself (not its children) to cross the Shadow DOM boundary.
Added d-math to the list of elements that get --global-text-color.

--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -28,7 +28,8 @@ d-article {
   h5,
   h6,
   li,
-  table {
+  table,
+  d-math {
     color: var(--global-text-color) !important;
   }
   h1,
